frontend/frontend-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-load-balancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
